--- a/.github/workflows/testrig.yml
+++ b/.github/workflows/testrig.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: ./@dfa3afb71c95b69bb94137495fa8d2aa2a443ed7
+      - uses: ./
         id: dotenvx
         with:
           path: .env
