Update inputs list
See: b7f8c49be314359cb8d5797a5d30362ea6f92245
Signed-off-by: Andrei Jiroh Halili <ajhalili2006@andreijiroh.xyz>

--- a/action.yml
+++ b/action.yml
@@ -10,9 +10,7 @@ inputs:
     required: true
   key:
     description: The value of `DOTENV_PRIVATE_KEY_CI` from your .env.keys file.
-    required: false
-  main-key:
-    description: The value of `DOTENV_PRIVATE_KEY` from your .env.keys file.
+    required: true
   inject-env-vars:
     description: >-
       Inject decrypted secrets as environment variables for subsequent steps if set to true
