--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@vercel/ncc": "^0.38.3"
+    "@types/node": "^24.3.3",
+    "@vercel/ncc": "^0.38.3",
+    "typescript": "^5.9.2"
   },
   "dependencies": {
     "@actions/core": "^1.11.1",
