docs: add contributing docs and update gitignore per previous commit
Signed-off-by: Andrei Jiroh Halili <ajhalili2006@andreijiroh.dev>

--- a/.gitignore
+++ b/.gitignore
@@ -66,7 +66,7 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env.keys
+!.env.keys
 .env.vault
 
 # parcel-bundler cache (https://parceljs.org/)
