fix: properly serialize JSON object and do file cleanup afterward
This commit is made with assistance from GitHub Copilot via Gemini 2.0 Flash model on VS Code.

Signed-off-by: Andrei Jiroh Halili <ajhalili2006@andreijiroh.dev>

--- a/remote-loader/action.yml
+++ b/remote-loader/action.yml
@@ -65,4 +65,9 @@ runs:
       id: results
       shell: bash
       run: |
-        echo "data=$(jq -n --arg data \"${{ steps.loader.outputs }}\" '$data | fromjson')" >> $GITHUB_OUTPUT
+        echo "data=$(echo '${{ steps.loader.outputs }}' | jq -c .)" >> $GITHUB_OUTPUT
+    
+    - name: Clean up fetched dotenv file
+      if: always()
+      shell: bash
+      run: rm -f /tmp/remote_env_file
