fix: more syntax error fixes with Copilot (via Gemini 2.5 Pro)
Signed-off-by: Andrei Jiroh Halili <ajhalili2006@andreijiroh.dev>

--- a/remote-loader/action.yml
+++ b/remote-loader/action.yml
@@ -65,7 +65,7 @@ runs:
       id: results
       shell: bash
       run: |
-        echo "data=$(echo '${{ steps.loader.outputs }}' | jq -c .)" >> $GITHUB_OUTPUT
+        echo "data=$(echo '${{ toJSON(steps.loader.outputs) }}' | jq -c .)" >> $GITHUB_OUTPUT
     
     - name: Clean up fetched dotenv file
       if: always()
